groundedness: a model that is down pauses scoring and never hides the classifier
The encoder's health no longer decides whether groundedness exists. It stays
in Classifiers with its findings and the org's switch; the health check only
gates sweeping:

- /healthz counts as up only when it lists the groundedness head.
- While the model is down nothing is enqueued, and a job claimed before it
  went down is handed back without spending an attempt.
- A refused or timed-out connection marks the model down and hands the job
  back the same way, so it never dead-letters; a 5xx or a 401 still counts.
- TESSARY_GROUNDEDNESS_CLASSIFIER_MODE: dev sweeps whenever the model answers;
  production records caught_up_at in the job payload and sleeps 30 minutes
  after a sweep reaches the head.
- GET .../classifiers/{id}/groundedness-status returns the row's state, mode,
  health and the git ref the setup prompts link to (the release tag, or main).

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>